<resources>
    <string name="app_name">WeedTube</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv1_forgotPass">Enter your email address and well send you your username and a link to reset your password.</string>
    <string name="tv2_forgotpass">Additionally, now you can add mobile number with email address,get OTP and reset your password within app only.</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="email_or_username">Email or username</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="or_login_with">Or Login with</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="version_2_4_pro_11_29_21">Version 2.4 Pro 11.29.21</string>
    <string name="signup_with">Signup with</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="username">Username</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="mm_dd_yyyy">MM/DD/YYYY</string>
    <string name="what_gender_do_you_identify_as">What gender do you identify as ?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="agree_to_terms_of_service_privacy_policy">Agree to Terms of Service Privacy Policy</string>
    <string name="signup_for_the_newsletter">Signup for the Newsletter</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="select_gender">Select Gender</string>
    <string name="create_your_account">Create your account</string>
    <string name="or">Or</string>

</resources>
