<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".loginScreen.LoginFragment">


    <data>
        <variable
            name="loginModel"
            type="com.example.pipeline.loginScreen.LoginViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gu_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="25dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gu_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="25dp" />


            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iv_login_logo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:src="@drawable/wt_new_logo"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_loginac"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/login_to_your_account"
                android:textStyle="bold"
                android:textSize="30sp"
                android:textColor="@color/login_tv"
                android:layout_marginTop="50dp"
                app:layout_constraintTop_toBottomOf="@+id/iv_login_logo"
                app:layout_constraintStart_toStartOf="@+id/gu_left"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_login_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/email_or_username"
                android:textStyle="normal"
                style="@style/TextSize"
                android:layout_marginTop="50dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_loginac"
                app:layout_constraintStart_toStartOf="@+id/gu_left"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_log_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                android:layout_marginTop="5dp"
                app:errorEnabled="true"
                app:errorIconDrawable="@drawable/error"
                app:errorIconTint="@color/error"
                app:errorTextColor="@color/error"

                app:layout_constraintEnd_toEndOf="@+id/gu_right"
                app:layout_constraintStart_toStartOf="@+id/gu_left"
                app:layout_constraintTop_toBottomOf="@+id/tv_login_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/et_border"
                android:padding="15dp"
                android:text="@={loginModel.email}"
                app:boxStrokeWidth="0dp"
                />
            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_login_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textStyle="normal"
                style="@style/TextSize"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@+id/et_log_email"
                app:layout_constraintStart_toStartOf="@+id/gu_left"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_log_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:boxStrokeWidth="0dp"
                style="@style/OutlineBoxValidation"
                app:boxStrokeWidthFocused="0dp"
                android:layout_marginTop="5dp"
                app:errorEnabled="true"
                app:errorIconDrawable="@drawable/error"
                app:errorIconTint="@color/error"
                app:errorTextColor="@color/error"
                app:layout_constraintEnd_toEndOf="@+id/gu_right"
                app:layout_constraintStart_toStartOf="@+id/gu_left"
                app:layout_constraintTop_toBottomOf="@+id/tv_login_password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={loginModel.password}"
                    android:padding="15dp"
                    android:background="@drawable/et_border"
                    app:boxStrokeWidth="0dp"
                    />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/checkbox_remember"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/remember_me"
                android:padding="3dp"
                android:textColor="@color/login_tv_2"
                android:textStyle="normal"
                style="@style/CustomCheckbox"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="@+id/gu_left"
                app:layout_constraintTop_toBottomOf="@+id/et_log_password"
                />
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_forgotpass"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textColor="@color/tv"
                android:textStyle="normal"
               app:layout_constraintTop_toTopOf="@id/checkbox_remember"
                app:layout_constraintBottom_toBottomOf="@id/checkbox_remember"
                app:layout_constraintEnd_toEndOf="@+id/gu_right"
                app:layout_constraintTop_toBottomOf="@+id/et_log_password"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:textSize="17sp"
                android:textColor="@color/white"
                android:layout_marginTop="10dp"
                android:padding="0dp"
                android:textAllCaps="false"
                android:onClick="@{()->loginModel.createLoginValidation()}"
                app:layout_constraintStart_toStartOf="@id/gu_left"
                app:layout_constraintEnd_toEndOf="@id/gu_right"
                android:background="@drawable/btn_login_color"
                app:layout_constraintTop_toBottomOf="@+id/checkbox_remember"
                android:text="@string/login"/>


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_orloginwith"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/or_login_with"
                android:textColor="@color/login_tv_2"
                android:textStyle="normal"
                android:gravity="center"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toStartOf="@id/btn_login"
                app:layout_constraintEnd_toEndOf="@id/btn_login"
                app:layout_constraintTop_toBottomOf="@+id/btn_login"
                />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iv_fb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/button_3"
                android:layout_marginStart="50dp"
                android:layout_marginTop="15dp"
                app:layout_constraintStart_toStartOf="@id/gu_left"
                app:layout_constraintTop_toBottomOf="@id/tv_orloginwith" />


            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iv_google"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/button_2"
                android:layout_marginEnd="50dp"
                android:layout_marginTop="15dp"
                app:layout_constraintEnd_toEndOf="@id/gu_right"
                app:layout_constraintTop_toBottomOf="@id/tv_orloginwith" />


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_donthave_ac"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/login_tv_2"
                android:textStyle="normal"
                android:layout_marginTop="12dp"
                android:layout_marginStart="20dp"
                app:layout_constraintStart_toStartOf="@id/iv_fb"
                app:layout_constraintTop_toBottomOf="@+id/iv_fb"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_click_register"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textColor="@color/tv"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="@+id/tv_donthave_ac"
               app:layout_constraintTop_toTopOf="@+id/tv_donthave_ac"
                app:layout_constraintStart_toEndOf="@+id/tv_donthave_ac"
                />


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_version"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/version_2_4_pro_11_29_21"
                android:textColor="@color/login_tv_2"
                android:textStyle="normal"
                android:gravity="center"
                android:layout_marginTop="40dp"
                app:layout_constraintStart_toStartOf="@id/gu_left"
                app:layout_constraintEnd_toEndOf="@id/gu_right"
                app:layout_constraintTop_toBottomOf="@+id/tv_donthave_ac"
                />





        </androidx.constraintlayout.widget.ConstraintLayout>


</layout>